--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-uglify": "~0.9.1"
+    "grunt-contrib-uglify": "~0.9.1",
+    "grunt-jsdoc": "~0.6.7"
   }
 }
